# wyze-local-devices

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  test_wyze_devices.py  wyze_devices.py
.github/workflows/: ci.yml  codeql.yml
skills/wyze-local-devices/: SKILL.md
skills/wyze-outdoor-lights/: SKILL.md
skills/wyze-outdoor-lights/agents/: openai.yaml
