[project]
name = "wyze-local-devices"
version = "0.1.0"
description = "List, cache, look up, and control local Wyze devices from a single Python CLI."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "MIT"
authors = [{ name = "Jay Zeng" }]
dependencies = [
  "certifi>=2024.2.2",
  "protobuf==5.29.6",
  "python-dotenv>=1.0.0",
  "wyze-sdk==2.3.6",
]

[project.scripts]
wyze-local-devices = "wyze_devices:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["wyze_devices"]

[tool.setuptools.data-files]
"share/wyze-local-devices/skills/wyze-local-devices" = ["skills/wyze-local-devices/SKILL.md"]
"share/wyze-local-devices/skills/wyze-local-devices/agents" = ["skills/wyze-local-devices/agents/openai.yaml"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["dotenv", "wyze_sdk"]
ignore_missing_imports = true

[tool.uv]
override-dependencies = ["protobuf==5.29.6"]
